<resources>
    <string name="app_name">网易云</string>

    <string name="app_slogn">音乐的力量</string>

    <string name="play_time">--:--</string>
    <string name="play_no_resource">无音乐</string>wang'yun
    <string name="play_mode">%1$s("%2$d")</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_mode_repeat">单曲播放</string>
    <string name="play_mode_loop">顺序播放</string>

    <string name="delete">删除</string>
    <string name="pause">暂停</string>
    <string name="start">开始</string>

    <string name="setting_key_mobile_wifi">mobile_wifi</string>
    <string name="setting_key_sound_effect">sound_effect</string>

    <!-- Transitions -->
    <string name="transition_cover">CoverTransition</string>
    <string name="transition_album">AlbumTransition</string>


    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="exit_tip">再按一次退出程序</string>

    <string name="play_next">播放下一首</string>

    <string name="song">歌曲名</string>
    <string name="artist_tips">歌手 - 专辑</string>
    <string name="unknown">未知</string>

    <!-- 我的界面 -->
    <string name="local_music">本地音乐</string>
    <string name="recent_play">最近播放</string>
    <string name="download_manager">下载管理</string>
    <string name="my_radio">我的电台</string>
    <string name="my_collect">我的收藏</string>
    <string name="show_create_musicList">创建的歌单</string>
    <string name="collect_musicList">收藏的歌单</string>
    <string name="dialog_set_only_me">设置为隐私歌单</string>

    <string name="music_list_name_length_init">0/40</string>
    <string name="music_list_name_length_limit">%1$d/40</string>
    
    <!-- 侧滑栏部分 -->
    <string name="moon_type">夜间</string>
    <string name="setting">设置</string>
    <string name="exit_application">退出</string>
    
    <string name="setting_time_stop">定时停止播放</string>
    <string name="scan">扫一扫</string>
    <string name="music_alarm_clock">音乐闹钟</string>
    <string name="cloud_disk">音乐云盘</string>
    <string name="coupon">优惠卷</string>
    <string name="join_us">加入音乐人</string>
    <string name="start_broadcast">我要开播</string>
    <string name="my_friend">我的好友</string>
    <string name="change_theme">个性换肤</string>
    
    <!-- localMusic toolbar -->
    <string name="action_search">搜索</string>
    <string name="action_scan_music">扫描本地音乐</string>
    <string name="action_select_sort">选择排序方式</string>
    <string name="action_get_lyric">获取封面歌词</string>
    <string name="action_upgrade_music_quailty">升级音质</string>

    <!-- localMusic tabLayout -->
    <string name="tab_single_music">单曲</string>
    <string name="tab_singer">歌手</string>
    <string name="tab_album">专辑</string>
    <string name="tab_folder">文件夹</string>

    <!-- multiply layout text -->
    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
</resources>
