<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/icon_search"
        android:iconTint="@color/white"
        app:showAsAction="always" />

    <!-- orderInCategory 设置排序，必须大于等于0，数值小的在前 -->
    <item
        android:id="@+id/action_scanMusic"
        android:title="@string/action_scan_music"
        android:orderInCategory="1"
        android:icon="@drawable/icon_scan_local"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/action_selectSort"
        android:title="@string/action_select_sort"
        android:orderInCategory="2"
        android:icon="@drawable/icon_sort"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/action_getLyric"
        android:title="@string/action_get_lyric"
        android:orderInCategory="3"
        android:icon="@drawable/icon_lyric"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/action_upgradeQuailty"
        android:orderInCategory="4"
        android:title="@string/action_upgrade_music_quailty"
        android:icon="@drawable/icon_upgrade_quailty"
        app:showAsAction="withText"
        />
</menu>