<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_56_dp"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_cover"
        android:layout_width="@dimen/layout_45_dp"
        android:layout_height="@dimen/layout_45_dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_8_dp"
        android:layout_marginStart="@dimen/layout_8_dp"
        android:layout_marginEnd="@dimen/layout_8_dp"
        android:src="@drawable/default_cover"
        android:transitionName="@string/transition_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_8_dp"
        android:layout_marginTop="@dimen/layout_16_dp"
        android:layout_marginEnd="@dimen/layout_8_dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/song"
        android:textColor="@color/dark"
        android:textSize="@dimen/layout_16_sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_16_dp"
        android:layout_marginTop="@dimen/layout_8_dp"
        android:layout_marginBottom="@dimen/layout_16_dp"
        android:drawablePadding="@dimen/layout_2_dp"
        android:ellipsize="marquee"
        android:gravity="center|start"
        android:singleLine="true"
        android:text="@string/artist_tips"
        android:textColor="@color/grey"
        android:textSize="@dimen/layout_12_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
</android.support.constraint.ConstraintLayout>