<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_72_dp"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="25dp">

    <View
        android:id="@+id/v_playing"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_16_dp"
        android:layout_marginBottom="@dimen/layout_16_dp"
        android:background="@color/app_green"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="@dimen/layout_45_dp"
        android:layout_height="@dimen/layout_45_dp"
        android:layout_marginStart="@dimen/layout_16_dp"
        android:layout_marginTop="@dimen/layout_8_dp"
        android:layout_marginBottom="@dimen/layout_8_dp"
        android:elevation="1dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_cover" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_8_dp"
        android:layout_marginTop="@dimen/layout_16_dp"
        android:layout_marginEnd="@dimen/layout_8_dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/song"
        android:textColor="@color/dark"
        android:textSize="@dimen/layout_16_sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_artist"
        app:layout_constraintEnd_toStartOf="@+id/iv_resource"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_8_dp"
        android:layout_marginTop="@dimen/layout_8_dp"
        android:layout_marginBottom="@dimen/layout_16_dp"
        android:drawablePadding="@dimen/layout_2_dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:lines="1"
        android:text="@string/artist_tips"
        android:textColor="@color/grey"
        android:textSize="@dimen/layout_12_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toEndOf="@+id/iv_cover"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <ImageView
        android:id="@+id/iv_resource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_10_dp"
        android:layout_marginTop="@dimen/layout_8_dp"
        android:layout_marginBottom="@dimen/layout_8_dp"
        android:padding="@dimen/layout_2_dp"
        android:src="@drawable/ic_mv"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_more"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:paddingStart="@dimen/layout_16_dp"
        android:paddingEnd="@dimen/layout_16_dp"
        android:src="@drawable/ic_more_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_resource"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/isCpView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/translucent_grey"
        android:contentDescription="@null"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>